Merge modules and rebrand project